--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en-US" class>
     <head>
         <title>
-            Chad Tolleson - CS565 - Fall 2019 - Assignment 2 - Exercise 3
+            Chad Tolleson - CS565 - Fall 2019 - Portfolio Project
         </title>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="exercise3.css">
+        <link rel="stylesheet" href="big_styles.css">
     </head>
     <body>
         <header>
@@ -45,7 +45,7 @@
         
         <section id="fancy_equine">
             <p>
-                <h3>Pictures of the exotic Poitevin draft horse, Baudet du Poitou donkey, and Poitevin mule:</h3>
+                <h3>Pictures of the exotic Poitevin draft horse, Baudet du Poitou donkey, and Poitevin mule: CAN YOU SEE THIS</h3>
                 <ul id="pics-list">
                     <li><img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Leonardo_11%2C_Poitevin_stallion.jpg" width="300" height="250" alt="Poitevin stallion, at show, maybe named 'Leonardo'"></li>
                     <li><img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Poitevin-mulassier06_SDA2012.JPG" width="300" height="250" alt="a fancier Poitevin stallion in hand, at show"></li>
