update with new landing page and separated info pages

--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
         <!-- <meta charset="UTF-8"> -->
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-        <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project - Contact Me</title>
+        <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project - News Links</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"/>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/boot strap.min.js"></script>
         <link rel="stylesheet" href="big_styles.css">
@@ -13,18 +13,21 @@
     <body>
 
         <header>
-            <div id="pg-header">Chad Tolleson - Contact Page</div>
+            <div id="pg-header">Chad Tolleson - News Links</div>
         </header>
         
-        <form id="contact_form" action="none">
-            <h3 id="form-header">Contact Form</h3>
-            <p><input type="text" name="firstname" placeholder="first name"></p>
-            <p><input type="text" name="lastname" placeholder="last name"></p>
-            <p><input type="text" name="email" placeholder="e-mail"></p>
-            <p><textarea name="feedback" id="feedback" placeholder="what are you thinking?"></textarea></p>
-            <input type="submit" name="submit" value="Submit">
-            <input type="submit" name="reset" value="Reset">
-        </form>
+        <section id="news_links">
+            <p>
+                <h3>You should always read the news every morning:</h3>
+                <ol id="news-list">
+                    <li><a href="https://www.cnn.com">CNN</a></li>
+                    <li><a href="https://www.bloomberg.com">Bloomberg</a></li>
+                    <li><a href="https://www.cnbc.com">CNBC</a></li>
+                    <li><a href="https://www.opb.org">OPB</a></li>
+                    <li><a href="https://www.oregonlive.com">Oregon Live</a></li>
+                </ol>
+            </p>
+        </section>    
         
         <footer>© 2019 Chad Tolleson. All rights reserved.</footer>
 
