added buttons to the landing page and updated the contact us form page also added some new fonts

--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <!-- <meta charset="UTF-8"> -->
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-        <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-        <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project - Contact Me</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"/>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/boot strap.min.js"></script>
         <link rel="stylesheet" href="big_styles.css">
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/pixel-operator" type="text/css"/>
+        <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/industrial" type="text/css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <!-- <script src="script.js"></script> -->
     </head>
     
     <body>
@@ -16,8 +21,8 @@
             <div id="pg-header">Chad Tolleson - Contact Page</div>
         </header>
         
-        <form id="contact_form" action="none">
-            <h3 id="form-header">Contact Form</h3>
+        <form action="none">
+            <br><h3>Contact Form</h3><br>
             <p><input type="text" name="firstname" placeholder="first name"></p>
             <p><input type="text" name="lastname" placeholder="last name"></p>
             <p><input type="text" name="email" placeholder="e-mail"></p>
