updated the about page to a draft state

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project</title>
+        <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project - Contact Form</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"/>
-        <link rel="stylesheet" href="big_styles.css">
+        <link rel="stylesheet" href="css/big_styles.css">
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/pixel-operator" type="text/css"/>
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/industrial" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -18,7 +18,7 @@
     <body>
 
         <header>
-            <div id="pg-header">Chad Tolleson - Contact Page</div>
+            <div id="pg-header">Chad Tolleson - Contact Form</div>
         </header>
         
         <form action="none">
@@ -31,6 +31,12 @@
             <input type="submit" name="reset" value="Reset">
         </form>
         
+        <div class="sectionbody" id="depwarn">
+            PLEASE NOTE THAT THIS FORM IS NOT CURRENTLY ACTIVATED. TO CONTACT ME, PLEASE GO TO THE
+            <a class="btn-link" href="about.html">ABOUT</a>
+            PAGE.<br>SORRY FOR THE CONFUSION.
+        </div>
+
         <footer>© 2019 Chad Tolleson. All rights reserved.</footer>
 
     </body>
