--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
         <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project - Projects</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"/>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/boot strap.min.js"></script>
-        <link rel="stylesheet" href="big_styles.css">
+        <link rel="stylesheet" href="css/big_styles.css">
     </head>
     
     <body>
@@ -22,6 +22,13 @@
                 </div>
         </section>
         
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-2"><a class="btn btn-sm btn-outline-success" href="news.html">News</a></div>
+                <div class="col-sm-2"><a class="btn btn-sm btn-outline-success" href="equine.html">Equine</a></div>
+            </div>
+        </div>
+
         <footer>© 2019 Chad Tolleson. All rights reserved.</footer>
 
     </body>
