--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project</title>
+        <title>Chad Tolleson - CS565 - Fall 2019 - Portfolio Project - Home</title>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"/>
-        <link rel="stylesheet" href="big_styles.css">
+        <link rel="stylesheet" href="css/big_styles.css">
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/pixel-operator" type="text/css"/>
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/industrial" type="text/css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
         <!-- <script src="script.js"></script> -->
     </head>
    
