further development on the about page

--- a/about.html
+++ b/about.html
@@ -37,15 +37,28 @@
                     </div>
                     <div class="grid-item aboutitem2">
                         Major professional accomplishments include:<br><br>
-                            &bullet; Functioned as project hub of cross-functional teams of client financial and accounting personnel, inside and outside legal counsel, financial advisors, data analysts, and assorted third party vendors.<br><br>
-                            &bullet; Scale business unit by approximately 3x.<br><br>
-                            &bullet; Onboard, train, and mentor team members.<br><br>
-                            &bullet; Engaged, motivated and trained client & team personnel in 20+ special projects.<br><br>
+                            Functioned as project hub of cross-functional teams of client financial and accounting personnel, inside and outside legal counsel, financial advisors, data analysts, and assorted third party vendors.<br><br>
+                            Scale business unit by approximately 3x.<br><br>
+                            Onboard, train, and mentor team members.<br><br>
+                            Engaged, motivated and trained client & team personnel in 20+ special projects.<br><br>
                     </div>
-
-                    <div class="grid-item aboutitem3">RESUME LINK GOES HERE</div>
-                    <div class="grid-item aboutitem4"><div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="chad-m-tolleson"><a class="LI-simple-link" href='https://www.linkedin.com/in/chad-m-tolleson?trk=profile-badge'>Chad M. Tolleson</a></div></div>
-                    <div class="grid-item aboutitem5">GITHUB LINK GOES HERE</div>
+                    <div class="grid-item aboutitem3">
+                        <a class="chadbutton" id="chadbutton1" href="img/Chad_M_Tolleson_Resume.pdf" target="0">
+                        Click Here For My Resume</a>
+                    </div>
+                    <div class="grid-item aboutitem4">
+                        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="chad-m-tolleson">
+                            <a class="LI-simple-link" href='https://www.linkedin.com/in/chad-m-tolleson?trk=profile-badge' target="0">
+                                Chad M. Tolleson, profile did not load.
+                            </a>
+                        </div>
+                    </div>
+                    <div class="grid-item aboutitem5">
+                        <a class="chadbutton" id="chadbutton2" href="https://github.com/tollesonpdx" target="0">
+                            Click Here For My GitHub Profile
+                            <!-- <img src="img/GitHub-Mark/PNG/GitHub-Mark-Light-32px.png" alt="GitHub Link"> -->
+                        </a>
+                    </div>
                     <div class="grid-item aboutitem6">currently unused</div>
                 </div>
             </div>
