changes to the projects page and ported over the head and header information to all other html pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/big_styles.css">
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/pixel-operator" type="text/css"/>
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/industrial" type="text/css"/>
+        <link rel="browser icon" href="img/gitFace.png">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -24,7 +25,7 @@
             <nav id="masternav" class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#">Chad M. Tolleson</a>
+                        <a class="navbar-brand" href="index.html">Chad M. Tolleson</a>
                     </div>
                 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -44,13 +45,13 @@
         </header>
       
         <div id="landing">
-            <!-- <iframe id="landingvid" frameborder="0"  allowfullscreen
+            <iframe id="landingvid" frameborder="0"  allowfullscreen
                 src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&controls=1&mute=1&autohide=1&loop=1">
-            </iframe> -->
-
-            <iframe id="landingvid"
-                src="https://www.youtube.com/embed/UO_QuXr521I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
+
+            <!-- <iframe id="landingvid"
+                src="https://www.youtube.com/embed/UO_QuXr521I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe> -->
 
 
             <div class="grid-container" id="landinggrid">
