updated landing page video

--- a/index.html
+++ b/index.html
@@ -45,10 +45,18 @@
         </header>
       
         <div id="landing">
-            <iframe id="landingvid" frameborder="0"  allowfullscreen
+
+            <!-- Muppets Bohemian Rhapsody -->
+            <!-- <iframe id="landingvid" frameborder="0"  allowfullscreen
                 src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&controls=1&mute=1&autohide=1&loop=1">
+            </iframe> -->
+
+            <!-- Long Nature Walk -->
+            <iframe id="landingvid" frameborder="0"  allowfullscreen
+                src="https://www.youtube.com/embed/lh5-eXzMZrA?start=15&autoplay=1&controls=1&mute=1&autohide=1&loop=1">
             </iframe>
 
+            <!-- Basic Filler Video -->
             <!-- <iframe id="landingvid"
                 src="https://www.youtube.com/embed/UO_QuXr521I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe> -->
