updated the front page to have white buttons

--- a/index.html
+++ b/index.html
@@ -47,14 +47,19 @@
         <div id="landing">
 
             <!-- Muppets Bohemian Rhapsody -->
-            <!-- <iframe id="landingvid" frameborder="0"  allowfullscreen
-                src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&controls=1&mute=1&autohide=1&loop=1">
-            </iframe> -->
+            <iframe id="landingvid" frameborder="0"  allowfullscreen
+                src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&controls=1&mute=1&autohide=1&playlist=tgbNymZ7vqY&loop=1">
+            </iframe>
 
             <!-- Long Nature Walk -->
-            <iframe id="landingvid" frameborder="0"  allowfullscreen
+            <!-- <iframe id="landingvid" frameborder="0"  allowfullscreen
                 src="https://www.youtube.com/embed/lh5-eXzMZrA?start=15&autoplay=1&controls=1&mute=1&autohide=1&loop=1">
-            </iframe>
+            </iframe> -->
+
+            <!-- Train from Bergen to Oslo -->
+            <!-- <iframe id="landingvid" frameborder="0"  allowfullscreen
+                src="https://www.youtube.com/embed/9pVWfzsgLoQ?autoplay=1&controls=1&mute=1&autohide=1&loop=1">
+            </iframe> -->
 
             <!-- Basic Filler Video -->
             <!-- <iframe id="landingvid"
@@ -63,9 +68,9 @@
 
 
             <div class="grid-container" id="landinggrid">
-                <div class="grid-item item1"><a class="btn btn-lg btn-outline-success" href="about.html">About Me</a></div>
-                <div class="grid-item item2"><a class="btn btn-lg btn-outline-success" href="projects.html">Projects</a></div>
-                <div class="grid-item item3"><a class="btn btn-lg btn-outline-success" href="contact.html">Contact</a></div>
+                <div class="grid-item item1"><a class="btn btn-lg btn-outline-light" href="about.html">About Me</a></div>
+                <div class="grid-item item2"><a class="btn btn-lg btn-outline-light" href="projects.html">Projects</a></div>
+                <div class="grid-item item3"><a class="btn btn-lg btn-outline-light" href="contact.html">Contact</a></div>
                 <!-- <div class="grid-item item1"><a class="nav-link" href="about.html">About Me</a></div> -->
                 <!-- <div class="grid-item item2"><a class="nav-link" href="projects.html">Projects</a></div> -->
                 <!-- <div class="grid-item item3"><a class="nav-link" href="contact.html">Contact</a></div> -->
