--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
             </iframe> -->
 
             <!-- Train from Bergen to Oslo -->
-            <iframe id="landingvid" frameborder="0"  allowfullscreen
+            <!-- <iframe id="landingvid" frameborder="0"  allowfullscreen
                 src="https://www.youtube.com/embed/9pVWfzsgLoQ?autoplay=1&controls=1&mute=1&autohide=1&loop=1">
-            </iframe>
+            </iframe> -->
 
             <!-- Basic Filler Video -->
+            <iframe id="landingvid" src="https://www.youtube.com/embed/QC8iQqtG0hg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
             <!-- <iframe id="landingvid"
-                src="https://www.youtube.com/embed/UO_QuXr521I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                src="https://www.youtube.com/embed/QC8iQqtG0hg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe> -->
 
 
@@ -71,7 +72,7 @@
                 <div class="grid-item item1"><a class="btn btn-lg btn-outline-light" href="about.html">About Me</a></div>
                 <div class="grid-item item2"><a class="btn btn-lg btn-outline-light" href="projects.html">Projects</a></div>
                 <div class="grid-item item3"><a class="btn btn-lg btn-outline-light" href="contact.html">Contact</a></div>
-                <!-- <div class="grid-item item1"><a class="nav-link" href="about.html">About Me</a></div> -->
+                <div class="grid-item item1"><a class="nav-link" href="about.html">About Me</a></div>
                 <!-- <div class="grid-item item2"><a class="nav-link" href="projects.html">Projects</a></div> -->
                 <!-- <div class="grid-item item3"><a class="nav-link" href="contact.html">Contact</a></div> -->
             </div> 
