updated landing vid

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </iframe> -->
 
             <!-- Basic Filler Video -->
-            <iframe id="landingvid" src="https://www.youtube.com/embed/QC8iQqtG0hg?controls=0&autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
+            <iframe id="landingvid" src="https://www.youtube.com/embed/QC8iQqtG0hg?controls=0&autoplay=1&loop=1&playlist=QC8iQqtG0hg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            
             <!-- <iframe id="landingvid"
                 src="https://www.youtube.com/embed/QC8iQqtG0hg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
             </iframe> -->
