minor changes in project

--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
                 <div class="col-sm-1"><a href="#"></a></div>
                 <div class="col-sm-1"><a href="#"></a></div>
                 <div class="col-sm-1"><a href="#"></a></div>
-                <div class="col-sm-1"><a href="#"></a></div>
+                <div class="col-sm-1"><a class="btn btn-sm btn-outline-success" href="#">55555</a></div>
                 <div class="col-sm-1"><a class="btn btn-sm btn-outline-success" href="news.html">News</a></div>
                 <div class="col-sm-1"><a class="btn btn-sm btn-outline-success" href="equine.html">Equine</a></div>
             </div>
