updated gitignore, removed equine and news, modified linkedin badge settings

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     </div>
                     <div class="grid-item aboutitem4">
                         <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="chad-m-tolleson">
-                            <a class="LI-simple-link" href='https://www.linkedin.com/in/chad-m-tolleson?trk=profile-badge' target="0">
+                            <a class="LI-simple-link" href='https://www.linkedin.com/in/chad-m-tolleson?trk=profile-badge' target="_self">
                                 Click Here for My LinkedIn Profile<br>The Profile Badge Did Not Load
                             </a>
                         </div>
