temp formatting changes for review

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </section>
 
         
-        <section id="placeholders">
+        <!-- <section id="placeholders">
             <div class="sectionheader" id="placeholderheader">THESE ARE PLACEHOLDERS</div>    
             <div class="placeholder">This is just placeholder material.<br></div>   
             <div class="placeholder">This is just placeholder material.<br></div>   
@@ -176,7 +176,7 @@
             <div class="placeholder">This is just placeholder material.<br></div>   
             <div class="placeholder">This is just placeholder material.<br></div>   
             
-        </section>
+        </section> -->
 
         <section id="projects">
             <div id="jump-project"><br></div>
