cleaned up readme and the landing page margins for mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                                 <a class="nav-link" href="#jump-project">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <!-- <a class="nav-link" href="https://www.linkedin.com/in/chad-m-tolleson" style="color: rgb(0,93,201)" target="noopener"> -->
                                 <a class="nav-link" href="https://www.linkedin.com/in/chad-m-tolleson" target="noopener">
                                     <i class="bi bi-linkedin" style="color: rgb(0,119,181);"></i>
                                 </a>
@@ -127,11 +126,12 @@
         <section id="big-vid-section" class="container">
             
             <div id="big-vid-text">
+                <br>
                 <button class="btn btn-outline btn-sm" id="vid-button">
                     <i class="bi bi-film"></i>
                 </button>
                 <br>
-                continue scrolling down for sample projects
+                keep scrolling for sample projects
                 <br>
                 <i class="bi bi-arrow-down"></i>
                 <i class="bi bi-arrow-down"></i>
@@ -322,6 +322,30 @@
 
             </div>
         </section>
+
+        <!-- <section id="big-vid-section" class="container">
+            
+            <div id="big-vid-text">
+                <br>
+                <i class="bi bi-arrow-up"></i>
+                <i class="bi bi-arrow-up"></i>
+                <i class="bi bi-arrow-up"></i>
+                <br>
+                scroll up for sample projects
+                <br>
+                <button class="btn btn-outline btn-sm" id="vid-button">
+                    <i class="bi bi-film"></i>
+                </button>
+
+            </div>
+
+            <div id="big-vid">
+                <iframe frameborder="0"  allowfullscreen="true" width="100%" height="100%"
+                    src="https://www.youtube.com/embed/9pVWfzsgLoQ?autoplay=1&controls=0&mute=1&autohide=1&loop=1">
+                </iframe>
+            </div>
+
+        </section> -->
 
         <footer>© 2019 - 2021 Chad M. Tolleson. All rights reserved.</footer>
 
