--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             </div>
 
             <div id="big-vid">
-                <iframe frameborder="0"  allowfullscreen="true" width="100%" height="100%"
-                    src="https://www.youtube.com/embed/9pVWfzsgLoQ?autoplay=1&controls=0&mute=1&autohide=1&loop=1">
-                </iframe>
+                <!-- <iframe frameborder="0"  allowfullscreen="true" width="100%" height="100%"
+                    src="https://www.youtube.com/embed/9pVWfzsgLoQ?vq=small&autoplay=1&controls=0&mute=1&autohide=1&loop=1">
+                </iframe> -->
             </div>
 
         </section>
