--- a/index.html
+++ b/index.html
@@ -139,9 +139,12 @@
             </div>
 
             <div id="big-vid">
-                <iframe frameborder="0"  allowfullscreen="true" width="100%" height="100%" loading="lazy"
+                <!-- <iframe frameborder="0"  allowfullscreen="true" width="100%" height="100%" loading="lazy"
                     src="https://www.youtube.com/embed/9pVWfzsgLoQ?vq=small&autoplay=1&controls=0&mute=1&autohide=1&loop=1">
-                </iframe>
+                </iframe> -->
+                <img src="img/train_01.gif" 
+                    style="height: 100%; width: 100%; object-fit: cover;">
+                </img>
             </div>
 
         </section>
@@ -346,6 +349,12 @@
             </div>
 
         </section> -->
+
+
+        <div style="font-size: small; text-align: center; margin-top: 20%;">
+            embedded video sampled from 
+            <a href="https://youtu.be/9pVWfzsgLoQ" target="noopener">https://youtu.be/9pVWfzsgLoQ</a>
+        </div>
 
         <footer>© 2019 - 2021 Chad M. Tolleson. All rights reserved.</footer>
 
