added image for LinkedIn featured purpose

--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
             </nav>
         </header>
       
+        <section id="hiddenpic">
+            <img class="img-fluid rounded" src="img/cassandra.jpg" alt="please ref this">
+        </section>
+
         <section id="about">
             <div class="container" id="about-grid">
                 <div class="about-item item1">
-                    Software Engineer | Data Scientist | SQL | Python | Java
+                    Software Engineer | Python | SQL |Java
                     <br>
                     <!-- with Business Finance Experience -->
                 </div>
@@ -72,7 +76,14 @@
                     <img class="img-fluid rounded" src="img/2017_headshot.jpg" alt="I lost my head.">
                 </div>
                 <div class="about-item item3">
-                    Analytical and thoughtful professional seeking an opportunity to combine business background and modern applications of software engineering, data science, and artificial intelligence. Demonstrated success using data driven business and digital transformation to solve complex problems. Recognized for ability to serve as project hub of cross-functional teams involving data analysts, legal counsel, finance and accounting personnel, and assorted third-party vendors. Proven experience of cultivating dynamic and diverse teams. Valued team member skilled at onboarding, training and mentoring team members.
+                    Analytical and thoughtful professional pivoting into software engineering and data science. I'm excited to broaden and deepen technical knowledge via direct application.
+                    <br><br>
+                    Demonstrated success with:<br>
+                    - using data to solve complex problems,<br>
+                    - serving as project hub of cross-functional teams of specialists of all stripes, and<br>
+                    - cultivating diverse and dynamic teams of people.
+                    <br><br>
+                    In my down time I enjoy exploring the natural wonders of the PNW. Check out my portfolio of recent projects. Let me know if you're interested in working together!
                 </div>
                 <div class="about-item item4">
                     
