added image for LinkedIn featured purpose

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </header>
       
         <section id="hiddenpic">
-            <img class="img-fluid rounded" src="img/cassandra.jpg" alt="please ref this">
+            <img class="img-fluid rounded" style="visibility: hidden; top: 0; left: 0; height: 0;" src="img/cassandra.jpg" alt="please ref this">
         </section>
 
         <section id="about">
