added image for LinkedIn featured purpose

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="about-item item1">
                     Software Engineer | Python | SQL |Java
                     <br>
-                    <!-- with Business Finance Experience -->
+                    <!-- Data Science & Business Finance Experience -->
                 </div>
                 <div class="about-item item2">
                     <img class="img-fluid rounded" src="img/2017_headshot.jpg" alt="I lost my head.">
