tailored the about section layout for Firefox and Chrome presentation, changed wording of about statement

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <section id="about">
             <div class="container" id="about-grid">
                 <div class="about-item item1">
-                    Software Engineer | Python | SQL |Java
+                    Software Engineer | Python | SQL | Java
                     <br>
                     <!-- Data Science & Business Finance Experience -->
                 </div>
@@ -76,16 +76,18 @@
                     <img class="img-fluid rounded" src="img/2017_headshot.jpg" alt="I lost my head.">
                 </div>
                 <div class="about-item item3">
-                    Analytical and thoughtful professional pivoting into software engineering and data science. I'm excited to broaden and deepen technical knowledge via direct application.
-                    <br><br>
-                    Demonstrated success with:<br>
-                    - using data to solve complex problems,<br>
-                    - serving as project hub of cross-functional teams of specialists of all stripes, and<br>
-                    - cultivating diverse and dynamic teams of people.
-                    <br><br>
-                    In my down time I enjoy exploring the natural wonders of the PNW. Check out my portfolio of recent projects. Let me know if you're interested in working together!
+                    I am an analytical and thoughtful professional pivoting my career to pursue my interest in software engineering and data science. My commitment is to broaden and deepen my technical knowledge by using it to produce tangible results.
                 </div>
                 <div class="about-item item4">
+                    Demonstrated success with:<br>
+                    - using data to solve complex problems,<br>
+                    - connecting cross-functional teams of specialists of all stripes, and<br>
+                    - cultivating diverse and dynamic teams of people.
+                </div>
+                <div class="about-item item5">
+                    In my down time I enjoy exploring the natural wonders of the PNW.
+                </div>
+                <div class="about-item item6">
                     
                     <div id="skills-list">
 
