added scala to skills

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                             <i class="devicon-c-plain-wordmark colored"></i>
                             <i class="devicon-postgresql-plain-wordmark colored"></i>
                             <i class="devicon-mongodb-plain-wordmark colored"></i>
+                            <i class="devicon-scala-plain-wordmark colored"></i>
                         </div>
 
                         <div>
