--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             <i class="devicon-bootstrap-plain-wordmark colored"></i>
                             <i class="devicon-devicon-plain-wordmark"></i>
                             <i class="devicon-javascript-plain colored"></i>
-                            <i class="devicon-jquery-plain-wordmark colored"></i>
+                            <!-- <i class="devicon-jquery-plain-wordmark colored"></i> -->
                             <i class="devicon-android-plain-wordmark colored"></i>
                         </div>
                         
