updated the headshot pic

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <!-- Data Science & Business Finance Experience -->
                 </div>
                 <div class="about-item item2">
-                    <img class="img-fluid rounded" src="img/2017_headshot.jpg" alt="I lost my head.">
+                    <img class="img-fluid rounded" src="img/2019_headshot.png" alt="I lost my head.">
                 </div>
                 <div class="about-item item3">
                     I am an analytical and thoughtful professional pivoting my career to pursue my interest in software engineering and data science. My commitment is to broaden and deepen my technical knowledge by using it to produce tangible results.
